feat: add comments functionality and storing on Localhost

--- a/src/index.html
+++ b/src/index.html
@@ -49,8 +49,13 @@
 
       </div>
       <div>Icons</div>
-      <section>Textos dos comentários</section>
-      <footer>Comment</footer>
+      <section id="allComments"></section>
+      <footer>
+        <input
+        id="newComment"
+        />
+        <button id="addComments">Add Comment</button>
+      </footer>
     </div>
     </main>
 
@@ -77,6 +82,9 @@
 
     <!-- Lorem Picsum -->
     <script src="javascripts/loremPicsum.js"></script>
+
+    <!-- Comments -->
+    <script src="javascripts/comment.js"></script>
 
   </body>
 </html>
