feat: improve dark mode's switcher

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,12 @@
           <!-- <button id="toggle" class="button">toggle</button> -->
           <label class="switch">
             <input id="toggle" type="checkbox">
-            <span class="slider round"></span>
+            <span class="slider round">
+              <div class="switch-darkmode-wrapper">
+                <img src="images/moon.svg"/>
+                <img src="images/sun.svg"/>
+              </div>
+            </span>
           </label>
         </div>
       </header>
