--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Web page CSS -->
-    <link rel="stylesheet" href="stylesheets/styles.css" />
+    <link rel="stylesheet" href="stylesheets/global.css" />
+    <link rel="stylesheet" href="stylesheets/post.css" />
+    <link rel="stylesheet" href="stylesheets/swiperSlide.css" />
+    <link rel="stylesheet" href="stylesheets/switchDarkMode.css" />
 
     <!-- Link Swiper's CSS -->
     <link
