feat: add reply system

--- a/src/index.html
+++ b/src/index.html
@@ -132,12 +132,13 @@
       <section id="all-comments">
       </section>
       <footer>
-        <div class="footer-wrapper">
+        <div class="footer-wrapper" id="footer-wrapper">
         <input
         id="new-comment"
         />
         <button id="add-comments">Post</button>
       </div>
+      <div id="warning-message"></div>
       </footer>
     </div>
     </div>
